--- a/style.css
+++ b/style.css
@@ -159,11 +159,8 @@ html, body {
 }
 
 .pdf {
-  width: 300%;
-  height: 2400px;
-  border: 1px solid var(--border);
-  border-radius: 10px;
-  background: #fff;
+  width: 100%;
+  height: 100%;
 }
 
 .bibtex {
